Update the user guide and README for the 0.2.0 release. Merged #17.

--- a/www/source/_nav.haml
+++ b/www/source/_nav.haml
@@ -31,6 +31,8 @@
     = link_to 'Examples', 'examples.html'
   %ul
     %li
+      = link_to 'Listenable Future', 'examples.html', :fragment => 'listenable-future'
+    %li
       = link_to 'DAO Pattern', 'examples.html', :fragment => 'data-access-object'
     %li
       = link_to 'Dropwizard (Managed)', 'examples.html', :fragment => 'dropwizard'
